crates/lang/macro/tests/ui/trait_def/fail/definition_rust_method.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait TraitDefinition {
    fn rust_method(&self);
}

fn main() {}
